Scrollbar gutter Chrome issue has been fixed!

--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,6 @@
 	themes:
 		cmyk --default,
 		dark --prefersdark;
-	/* Disable scrollbar gutter due to Chrome bug: https://stackoverflow.com/questions/77787580/width-of-screen-is-not-calculating-correctly-when-using-scrollbar-gutter-stable */
-	exclude: rootscrollgutter;
 }
 
 @plugin 'daisyui/theme' {
